# COMP6441

./: decode.cpp  shuffle.py  twin.py  vig.py
somethingawesome/: Bank.cpp  Bank.h  CMakeLists.txt  Customer.cpp  Customer.h  CustomerProfile.cpp  CustomerProfile.h  FraudDetector.h  TransactionHistory.cpp  behaviour.txt  behaviour_Doris.txt  behaviour_Elizabeth  behaviour_Patrick.txt  behaviour_Stephen  behaviours.txt  card.h  customers.txt  entropy.m  information_gain.m  main.cpp  plot_entropy.m  training_John.txt  transaction.h  transactionHistory.h  transactionTime.h  vendorType.h
